exports[`test the manage button handling an onclick event 1`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the manage button handling an onclick event 2`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the site component matches the snapshot 1`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={undefined}
    type="button">
    Manage
  </button>
</div>
`;
